<resources>

    <string name="hello">Hello World, TextStudentManager!</string>
    <string name="app_name">这是一个花里胡哨的系统</string>
    <string name="information_write">学员信息修改</string>
    <string name="button1">男</string>
    <string name="button2">女</string>
    <string name="box1">唱歌</string>
    <string name="box2">跳舞</string>
    <string name="box3">rap</string>
    <string name="box4">篮球</string>
    <string name="myButton">添加学员信息</string>
    <string name="spinner">请选择</string>
    <string name="login">用户登录</string>
    <string name="tv_username">用户:</string>
    <string name="tv_password">密码:</string>
    <string name="sxy_log">登录</string>
    <string name="sxy_bos">取消</string>
    <string name="sxy_cxk">花里胡哨</string>
    <string name="sxy_name">输入用户名</string>
    <string name="sxy_pwd">输入密码</string>
    <string name="empty">节数</string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sat">周六</string>
    <string name="sun">周日</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_first" />
    <string name="label_second" />
    <string name="label_third" />
    <string name="label_four" />
    <string name="label_five" />
    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
