<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kk"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.sxy05.my.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="#ff00ff"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/sxy_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/sxy_name"
            android:singleLine="true"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/sxy_pwd"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/sxy_pwd"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/sxy_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sxy_log"/>

        <Button
            android:id="@+id/sxy_bos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sxy_bos"/>

    </LinearLayout>

    <Button
        android:id="@+id/sxy_cxk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="花里胡哨" />

</LinearLayout>